Fixed the spacing on the menu

--- a/style.css
+++ b/style.css
@@ -224,8 +224,6 @@ a.top {
     #menu-container {
         width: 100%;
         min-width: 0px;
-        max-width: 768px;
-        padding: 0 35px 0 35px;
         display: flex;
         flex-flow: column;
         justify-content: center;
@@ -233,8 +231,15 @@ a.top {
 
     #menu-list {
         font-size: 14px;
-        justify-content: center;
         align-items: center;
+        padding: 0;
+        width: 350px;
+        justify-content: space-between;
+    }
+
+    #menu-list li {
+        justify-content: space-between;
+        padding: 0;
     }
 
     #menu-left {
